# Team1

./: README.md
projects/: README.md
projects/kitties/: Cargo.toml  README.md
projects/kitties/runtime/: Cargo.toml
projects/kitties/runtime/src/: kitties.rs  lib.rs
projects/kitties/runtime/src/kitties/: mock.rs  mod.rs  tests.rs
projects/kitties/src/: main.rs  service.rs
projects/lesson-1/: README.md  效果截图.docx
projects/lesson-1/abc/: Cargo.toml
projects/lesson-1/abc/runtime/: Cargo.toml
projects/lesson-1/abc/runtime/src/: lib.rs
projects/lesson-1/abc/src/: chain_spec.rs  main.rs  service.rs
projects/lesson-1/kitty/: Cargo.toml
projects/lesson-1/kitty/runtime/: Cargo.toml
projects/lesson-1/kitty/runtime/src/: lib.rs
projects/lesson-1/kitty/src/: chain_spec.rs  main.rs  service.rs
projects/lesson-1/substrate-kitties/: Cargo.toml
projects/lesson-1/substrate-kitties/runtime/: Cargo.toml
projects/lesson-1/substrate-kitties/src/: main.rs
projects/lesson-1/substrate_kitty/: Cargo.toml
projects/lesson-1/substrate_kitty/runtime/: Cargo.toml
projects/lesson-1/substrate_kitty/runtime/src/: lib.rs
projects/lesson-1/substrate_kitty/src/: chain_spec.rs  main.rs  service.rs
projects/lesson-2/: README.md  kitty设计文档
projects/lesson-2/runtime/: Cargo.toml  build.rs
projects/lesson-2/runtime/src/: kitties.rs  kitty.rs  lib.rs  substratekitties.rs
projects/lesson-2/runtime/src/kitties/: mod.rs
projects/lesson-3/: README.md  kitty设计文档2.0
projects/lesson-3/runtime/src/: kitties.rs  lib.rs
projects/lesson-4/: ANSWER.md  lesson-4-kitties-js.js  lesson-4-kitties-types.json
projects/lesson-4/runtime/src/: kitties.rs
projects/lesson-5/: ANSWER.md  kitty设计文档v4
projects/lesson-5/runtime/src/: kitties.rs  lib.rs
projects/lesson-6/: ANSWER.md
projects/lesson-6/runtime/src/: kitties.rs  linked_item.rs
projects/lesson-7/: ANSWER.md
projects/lesson-7/runtime/src/: kitties.rs  linked_item.rs
