[package]
authors = ['TangBoHao']
build = 'build.rs'
edition = '2018'
name = 'kitties'
version = '2.0.0'

[build-dependencies]
vergen = '3'

[workspace]
members = ['runtime']

[dependencies]
codec = { version = '1.0.3', package = 'parity-scale-codec' }
ctrlc = { version = '3.0', features = ['termination'] }
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.kitties-runtime]
path = 'runtime'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[[bin]]
name = 'kitties'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'
