[package]
authors = ['TangBoHao']
edition = '2018'
name = 'kitties-runtime'
version = '2.0.0'

[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]

[build-dependencies]
wasm-builder-runner = { version = '1.0.3', package = 'substrate-wasm-builder-runner' }

[dependencies]
codec = { version = '1.0.3', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0', default-features = false }
serde = { version = '1.0', optional = true, features = ['derive'] }

[dependencies.babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '204e10f4805bd6b373ef0e5337697ec24d597f97'
